--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "expo": "^47.0.0",
+    "mobx": "^6.7.0",
+    "mobx-persist-store": "^1.1.3",
+    "mobx-react": "^7.6.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
@@ -15,6 +19,7 @@
     "@babel/core": "^7.19.3",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "typescript": "^4.6.3"
   },
   "scripts": {
