--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
   "dependencies": {
+    "@noble/hashes": "^1.1.5",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "base-64": "^1.0.0",
     "expo": "^47.0.0",
+    "expo-linking": "~3.3.0",
+    "expo-random": "^13.0.0",
+    "expo-standard-web-crypto": "^1.4.1",
     "mobx": "^6.7.0",
     "mobx-persist-store": "^1.1.3",
     "mobx-react": "^7.6.0",
+    "nostr-react": "^0.6.1",
+    "nostr-tools": "^1.1.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-paper": "^5.1.3",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "text-encoding": "^0.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
+    "@types/base-64": "^1.0.0",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
