--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "dependencies": {
-    "@noble/hashes": "^1.1.5",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
@@ -29,9 +28,11 @@
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "patch-package": "^6.5.1",
     "typescript": "^4.6.3"
   },
   "scripts": {
+    "postinstall": "patch-package",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
