--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "expo-linking": "~3.3.0",
     "expo-random": "^13.0.0",
     "expo-standard-web-crypto": "^1.4.1",
+    "javascript-time-ago": "^2.5.9",
     "mobx": "^6.7.0",
     "mobx-persist-store": "^1.1.3",
     "mobx-react": "^7.6.0",
@@ -20,6 +21,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.7",
+    "react-time-ago": "^7.2.1",
     "text-encoding": "^0.7.0"
   },
   "devDependencies": {
