--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.7",
+    "react-native-webview": "11.23.1",
+    "react-native-webview-crypto": "^0.0.25",
     "react-time-ago": "^7.2.1",
     "text-encoding": "^0.7.0"
   },
