--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@react-navigation/native-stack": "^6.9.8",
     "base-64": "^1.0.0",
     "expo": "^47.0.0",
+    "expo-clipboard": "~4.0.1",
     "expo-linking": "~3.3.0",
     "expo-random": "^13.0.0",
     "expo-standard-web-crypto": "^1.4.1",
@@ -21,6 +22,7 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-paper": "^5.1.3",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
