--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
     "@types/base-64": "^1.0.0",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "patch-package": "^6.5.1",
     "typescript": "^4.6.3"
   },
@@ -44,7 +48,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "tsc --noEmit && eslint --ext .js,.jsx,.ts,.tsx ./"
   },
   "version": "1.0.0",
   "private": true,
