--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "patch-package": "^6.5.1",
+    "prettier": "^2.8.3",
     "typescript": "^4.6.3"
   },
   "scripts": {
@@ -49,6 +51,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "prettier": "prettier --check ./src",
+    "prettier:write": "prettier --write ./src",
     "lint": "tsc --noEmit && eslint --ext .js,.jsx,.ts,.tsx ./"
   },
   "version": "1.0.0",
