--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "base-64": "^1.0.0",
+    "eslint": "^8.33.0",
     "expo": "^47.0.0",
     "expo-clipboard": "~4.0.1",
     "expo-linking": "~3.3.0",
