--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "base-64": "^1.0.0",
-    "eslint": "^8.33.0",
     "expo": "^47.0.0",
     "expo-clipboard": "~4.0.1",
     "expo-linking": "~3.3.0",
@@ -39,9 +38,11 @@
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "eslint": "^8.33.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-native": "^4.0.0",
     "patch-package": "^6.5.1",
     "prettier": "^2.8.3",
     "typescript": "^4.6.3"
