--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "expo-clipboard": "~4.0.1",
     "expo-linking": "~3.3.0",
     "expo-random": "^13.0.0",
+    "expo-splash-screen": "~0.17.5",
     "expo-standard-web-crypto": "^1.4.1",
+    "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
     "mobx": "^6.7.0",
     "mobx-persist-store": "^1.1.3",
@@ -25,12 +27,11 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "~0.18.7",
     "react-native-webview": "11.23.1",
     "react-native-webview-crypto": "^0.0.25",
-    "text-encoding": "^0.7.0",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2"
+    "text-encoding": "^0.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
