--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react-native": "0.70.5",
     "react-native-paper": "^5.1.3",
     "react-native-qrcode-svg": "^6.2.0",
+    "react-native-quick-sqlite": "^8.0.0-beta.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-sensitive-info": "^5.5.8",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "~0.18.7",
