--- a/package.json
+++ b/package.json
@@ -12,13 +12,11 @@
     "expo-linking": "~3.3.0",
     "expo-modules-autolinking": "~1.0.0",
     "expo-random": "^13.0.0",
+    "expo-secure-store": "~12.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-standard-web-crypto": "^1.4.1",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
-    "mobx": "^6.7.0",
-    "mobx-persist-store": "^1.1.3",
-    "mobx-react": "^7.6.0",
     "nostr-react": "^0.6.1",
     "nostr-tools": "^1.1.1",
     "react": "18.1.0",
@@ -28,6 +26,7 @@
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "~0.18.7",
@@ -40,6 +39,7 @@
     "@types/base-64": "^1.0.0",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
+    "@types/react-native-sqlite-storage": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
