--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-random": "^13.0.0",
     "expo-secure-store": "~12.0.0",
     "expo-splash-screen": "~0.17.5",
+    "expo-sqlite": "^11.0.0",
     "expo-standard-web-crypto": "^1.4.1",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
@@ -26,7 +27,6 @@
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "~0.18.7",
