--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "react-native-material-menu": "^2.0.0",
     "react-native-paper": "^5.1.3",
     "react-native-qrcode-svg": "^6.2.0",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.0.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-native-webview": "11.23.1",
     "react-native-webview-crypto": "^0.0.25",
@@ -41,6 +43,7 @@
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "@types/react-native-sqlite-storage": "^5.0.2",
+    "@types/react-native-vector-icons": "^6.4.13",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
