--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-standard-web-crypto": "^1.4.1",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
+    "javascript-time-ago": "^2.5.9",
     "nostr-react": "^0.6.1",
     "nostr-tools": "^1.1.1",
     "react": "18.1.0",
@@ -35,6 +36,7 @@
     "react-native-web": "~0.18.7",
     "react-native-webview": "11.23.1",
     "react-native-webview-crypto": "^0.0.25",
+    "react-time-ago": "^7.2.1",
     "text-encoding": "^0.7.0"
   },
   "devDependencies": {
