--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "base-64": "^1.0.0",
     "expo": "~47.0.12",
     "expo-clipboard": "~4.0.1",
+    "expo-haptics": "~12.0.1",
     "expo-linking": "~3.3.0",
     "expo-modules-autolinking": "~1.0.0",
     "expo-random": "^13.0.0",
@@ -24,6 +25,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-material-menu": "^2.0.0",
     "react-native-paper": "^5.1.3",
     "react-native-qrcode-svg": "^6.2.0",
