--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^5.1.3",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
