--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "base-64": "^1.0.0",
     "expo": "~47.0.12",
     "expo-clipboard": "~4.0.1",
-    "expo-linking": "~3.3.0",
+    "expo-linking": "~3.3.1",
     "expo-modules-autolinking": "~1.0.0",
-    "expo-random": "^13.0.0",
+    "expo-random": "~13.0.0",
     "expo-secure-store": "~12.0.0",
     "expo-splash-screen": "~0.17.5",
-    "expo-sqlite": "^11.0.0",
+    "expo-sqlite": "~11.0.0",
     "expo-standard-web-crypto": "^1.4.1",
-    "expo-status-bar": "~1.4.2",
+    "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.15.6",
     "javascript-time-ago": "^2.5.9",
     "nostr-react": "^0.6.1",
@@ -42,7 +42,7 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@types/base-64": "^1.0.0",
-    "@types/react": "~18.0.24",
+    "@types/react": "~18.0.27",
     "@types/react-native": "~0.70.6",
     "@types/react-native-sqlite-storage": "^5.0.2",
     "@types/react-native-vector-icons": "^6.4.13",
