--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "@react-navigation/native-stack": "^6.9.8",
     "base-64": "^1.0.0",
     "expo": "~47.0.12",
+    "expo-background-fetch": "~11.0.1",
     "expo-clipboard": "~4.0.1",
     "expo-linking": "~3.3.1",
     "expo-modules-autolinking": "~1.0.0",
+    "expo-notifications": "~0.17.0",
     "expo-random": "~13.0.0",
     "expo-secure-store": "~12.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-sqlite": "~11.0.0",
     "expo-standard-web-crypto": "^1.4.1",
     "expo-status-bar": "~1.4.4",
+    "expo-task-manager": "~11.0.1",
     "expo-updates": "~0.15.6",
     "javascript-time-ago": "^2.5.9",
     "nostr-tools": "^1.7.4",
